# GodWit-Daemon

./: .gitignore  .travis.yml  Cargo.toml  PKGBUILD  README.md  build.rs  dyn_compile.rs
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
completions/: _godwit-daemon  _godwit-daemon.ps1  godwit-daemon.bash  godwit-daemon.fish
docs/: release-checklist.md  todo.md
docs/manpage/: godwit-daemon.tpl
pkg/brew/: godwit-daemon-bin.rb
scripts/: gen-md5  install-misc
src/: lib.rs  main.rs
src/config/: internal.rs  mod.rs
src/core/: mod.rs
src/core/backends/: mod.rs
src/core/backends/firefox/: errors.rs  mod.rs
src/core/backends/termite/: errors.rs  mod.rs
src/dispatcher/: mod.rs
src/errors/: mod.rs
src/prochandler/: mod.rs
src/runner/: mod.rs
