[package]
name = "godwit-daemon"
description = "A daemon runner for GodWit."
version = "0.1.10"
authors = ["Utkarsh Bhardwaj (Passeriform) <passeriform.ub@gmail.com>"]
readme = "README.md"
keywords = ["daemon", "runner", "tracker", "service", "internal"]
categories = ["command-line-utilities", "caching", "development-tools", "asynchronous", "concurrency"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Passeriform/GodWit-Daemon"
homepage = "https://www.passeriform.com/prod/GodWit/daemon"
exclude = [
"assets/*"
]
edition = "2018"

[badges]
travis-ci = { repository = "Passeriform/GodWit-Daemon" }
codecov = { repository = "Passeriform/GodWit-Daemon" }
is-it-maintained-issue-resolution = { repository = "https://github.com/Passeriform/GodWit-Daemon" }
is-it-maintained-open-issues = { repository = "https://github.com/Passeriform/GodWit-Daemon" }
maintenance = { status = "actively-developed" }

[lib]
name = "godwit_daemon"
path = "src/lib.rs"

[[bin]]
name = "godwit_daemon"
path = "src/main.rs"

[[test]]
name = "integration"
path = "tests/tests.rs"

[dependencies]
chrono = "0.4.11"
clap = { version = "2.33.1", default-features = false}
custom_error = "1.7.1"
dirs = "2.0.2"
getter-derive-rs = "1.0.2"
glob = "0.3.0"
lazy_static = "1.4.0"
libloading = "0.6.2"
log = "0.4.8"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
simplelog = "0.7.6"
structopt = "0.3.14"
structopt-derive = "0.4.7"
tempfile = "3.1.0"
threadpool = "1.8.1"
zmq = "0.9.2"

[build-dependencies]
flate2 = "1.0.16"
glob = "0.3.0"
rand = "0.7.3"
reqwest = { version = "0.10.7", features = ["blocking"] }
rustc_version = "0.2.3"
serde = { version = "1.0.104", features = ["derive"] }
tar = "0.4.29"
tempfile = "3.1.0"
toml = "0.5.6"

[target.'cfg(target_os = "android")'.dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]

[target.'cfg(target_os = "windows")'.build-dependencies]

[features]
docs-rs = []
symbols = []

[package.metadata.docs.rs]
features = ["docs-rs"]

[backends]
gwd-backend-firefox = "0.1.5"
